--- a/index.html
+++ b/index.html
@@ -43,7 +43,34 @@
       </div>
     </header>
     <!-- End Header -->
+    <!-- Start Home -->
 
+    <div class="home">
+      <div class="overlay"></div>
+      <div class="box">
+        <div class="content">
+          <h2>
+            Hello World!<br />
+            We Are Kasper We Make Art.
+          </h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+            Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+      </div>
+      <i class="fas fa-angle-left change-background fa-2x"></i>
+      <i class="fas fa-angle-right change-background fa-2x"></i>
+      <ul class="bullets">
+        <li></li>
+        <li class="active"></li>
+        <li></li>
+      </ul>
+    </div>
+
+    <!-- End Home -->
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
