services and main title

--- a/index.html
+++ b/index.html
@@ -71,6 +71,68 @@
     </div>
 
     <!-- End Home -->
+
+    <!-- Start Services -->
+    <div class="services">
+      <h1 class="title">Services</h1>
+      <p>
+        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+        blandit aliquet elit, eget tincidunt.
+      </p>
+      <div class="container">
+        <div class="box">
+          <i class="fas fa-desktop fa-3x"></i>
+          <div class="text">
+            <h3>Vorem amet intuitive</h3>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+              Curabitur aliquet quam.
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <i class="fas fa-cog fa-3x"></i>
+          <div class="text">
+            <h3>Vorem amet intuitive</h3>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+              Curabitur aliquet quam.
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <i class="fas fa-pencil-ruler fa-3x"></i>
+          <div class="text">
+            <h3>Vorem amet intuitive</h3>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+              Curabitur aliquet quam.
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <i class="fas fa-camera fa-3x"></i>
+          <div class="text">
+            <h3>Vorem amet intuitive</h3>
+            <p>
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+              Curabitur aliquet quam.
+            </p>
+          </div>
+        </div>
+        <!--End box-->
+      </div>
+      <!--End container-->
+    </div>
+
+    <!-- End Services -->
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
