--- a/index.html
+++ b/index.html
@@ -132,6 +132,21 @@
       <!--End container-->
     </div>
 
+    <!--Start Design-->
+    <div class="design">
+      <img src="img/mobile.png" alt="" />
+      <div class="box">
+        <h2>Our Design Comes With...</h2>
+        <ul>
+          <li>Responsive Design</li>
+          <li>Modern And Clean Design</li>
+          <li>Clean Code</li>
+          <li>Browser Friendly</li>
+        </ul>
+      </div>
+    </div>
+    <!--End Design-->
+
     <!-- End Services -->
     <!--Main js-->
     <script src="js/main.js"></script>
