--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </div>
     </header>
     <!-- End Header -->
-    <!-- Start Home -->
 
+    <!-- Start Home -->
     <div class="home">
       <div class="overlay"></div>
       <div class="box">
@@ -69,7 +69,6 @@
         <li></li>
       </ul>
     </div>
-
     <!-- End Home -->
 
     <!-- Start Services -->
@@ -131,6 +130,7 @@
       </div>
       <!--End container-->
     </div>
+    <!-- End Services -->
 
     <!--Start Design-->
     <div class="design">
@@ -147,7 +147,95 @@
     </div>
     <!--End Design-->
 
-    <!-- End Services -->
+    <!--Start portfolio-->
+    <div class="portfolio">
+      <h1 class="title">portfolio</h1>
+      <p>
+        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+        blandit aliquet elit, eget tincidunt.
+      </p>
+      <!--container-->
+      <div class="container">
+        <ul class="shuffle">
+          <li class="active">All</li>
+          <li>App</li>
+          <li>Photo</li>
+          <li>Web</li>
+          <li>Print</li>
+        </ul>
+      </div>
+      <!--End container-->
+      <div class="img-container">
+        <!--box 1-->
+        <div class="box">
+          <img src="img/shuffle-01.jpg" alt="" />
+          <div class="info">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <!--box 2-->
+        <div class="box">
+          <img src="img/shuffle-02.jpg" alt="" />
+          <div class="info">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <!--box 3-->
+        <div class="box">
+          <img src="img/shuffle-03.jpg" alt="" />
+          <div class="info">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <!--box 4-->
+        <div class="box">
+          <img src="img/shuffle-04.jpg" alt="" />
+          <div class="info">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <!--box 5-->
+        <div class="box">
+          <img src="img/shuffle-05.jpg" alt="" />
+          <div class="info">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <!--box 6-->
+        <div class="box">
+          <img src="img/shuffle-06.jpg" alt="" />
+          <div class="info">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <!--box 7-->
+        <div class="box">
+          <img src="img/shuffle-07.jpg" alt="" />
+          <div class="info">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <!--box 8-->
+        <div class="box">
+          <img src="img/shuffle-08.jpg" alt="" />
+          <div class="info">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
+        </div>
+        <!--End box-->
+      </div>
+      <!--End img container-->
+    </div>
+    <!--End portfolio-->
+
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
