--- a/index.html
+++ b/index.html
@@ -236,6 +236,17 @@
     </div>
     <!--End portfolio-->
 
+    <!--Start Video-->
+    <div class="video">
+      <video src="img/awesome-video.mp4" autoplay muted loop></video>
+      <div class="box">
+        <h2>Super Awesome Video Here</h2>
+        <p>Its All You Need</p>
+        <button>See More</button>
+      </div>
+    </div>
+    <!--End Video-->
+
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
