--- a/index.html
+++ b/index.html
@@ -247,6 +247,19 @@
     </div>
     <!--End Video-->
 
+    <!--Start About-->
+    <div class="about">
+      <h1 class="title">About US</h1>
+      <p>
+        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+        blandit aliquet elit, eget tincidunt.
+      </p>
+      <div class="container">
+        <img src="img/about.png" alt="" />
+      </div>
+    </div>
+    <!--End About-->
+
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
