--- a/index.html
+++ b/index.html
@@ -287,6 +287,89 @@
     </div>
     <!-- End Statistics -->
 
+    <!--Start Our Skills-->
+    <div class="our-skills">
+      <div class="container">
+        <!--testmonians-->
+        <div class="testimonials">
+          <h3>Testimonials</h3>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+          <div class="box">
+            <img src="img/skills-01.jpg" alt="" />
+            <div class="text">
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+              <p>John Doe, CEO</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/skills-02.jpg" alt="" />
+            <div class="text">
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+              <p>John Doe, CEO</p>
+            </div>
+          </div>
+          <ul class="bullets">
+            <li></li>
+            <li class="active"></li>
+            <li></li>
+          </ul>
+        </div>
+        <!-- End testmonians-->
+
+        <!--skills-->
+        <div class="skills">
+          <h3>Skills</h3>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+          <div class="prog-holder">
+            <h4>Adobe</h4>
+            <div class="prog">
+              <span style="width: 90%" data-progress="90%"></span>
+            </div>
+          </div>
+          <div class="prog-holder">
+            <h4>Html &amp; Css</h4>
+            <div class="prog">
+              <span style="width: 85%" data-progress="85%"></span>
+            </div>
+          </div>
+          <div class="prog-holder">
+            <h4>JavaScript</h4>
+            <div class="prog">
+              <span style="width: 80%" data-progress="80%"></span>
+            </div>
+          </div>
+          <div class="prog-holder">
+            <h4>Php</h4>
+            <div class="prog">
+              <span style="width: 90%" data-progress="90%"></span>
+            </div>
+          </div>
+        </div>
+        <!--End Skills-->
+      </div>
+    </div>
+    <!--End Our Skills-->
+
+    <!--Start Quote-->
+    <div class="quote">
+      <div class="container">
+        <q
+          >accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
+          elit, eget tincidunt.</q
+        >
+        <span>John Doe</span>
+      </div>
+    </div>
+    <!--End Quote-->
+
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
