--- a/index.html
+++ b/index.html
@@ -370,6 +370,85 @@
     </div>
     <!--End Quote-->
 
+    <!--Start Pricing -->
+    <div class="pricing">
+      <h1 class="title">Pricing</h1>
+      <p>
+        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+        blandit aliquet elit, eget tincidunt.
+      </p>
+      <div class="container">
+        <!--Box 1-->
+        <div class="box">
+          <div class="head">
+            <h3>Basic</h3>
+            <span>19</span>
+          </div>
+          <ul>
+            <li>Feature No 1</li>
+            <li>Extra Feature</li>
+            <li>Extra Feature No 2</li>
+            <li>Feature</li>
+          </ul>
+          <div class="foot">
+            <a href="#">Buy Now</a>
+          </div>
+        </div>
+        <!--Box 2-->
+        <div class="box">
+          <div class="head">
+            <h3>Premium</h3>
+            <span>29</span>
+          </div>
+          <ul>
+            <li>Feature No 1</li>
+            <li>Extra Feature</li>
+            <li>Extra Feature No 2</li>
+            <li>Feature</li>
+          </ul>
+          <div class="foot">
+            <a href="#">Buy Now</a>
+          </div>
+        </div>
+        <!--Box 3-->
+        <div class="box">
+          <div class="head">
+            <h3>Pro</h3>
+            <span>39</span>
+          </div>
+          <ul>
+            <li>Feature No 1</li>
+            <li>Extra Feature</li>
+            <li>Extra Feature No 2</li>
+            <li>Feature</li>
+          </ul>
+          <div class="foot">
+            <a href="#">Buy Now</a>
+          </div>
+        </div>
+        <!--Box 4-->
+        <div class="box">
+          <div class="head">
+            <h3>Platinum</h3>
+            <span>49</span>
+          </div>
+          <ul>
+            <li>Feature No 1</li>
+            <li>Extra Feature</li>
+            <li>Extra Feature No 2</li>
+            <li>Feature</li>
+          </ul>
+          <div class="foot">
+            <a href="#">Buy Now</a>
+          </div>
+        </div>
+        <!--End Box-->
+      </div>
+      <p class="contact-text">Contact us if you have special request</p>
+      <a href="#" class="contact-link">Contact Us</a>
+    </div>
+    <!--End Pricing -->
+
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
