--- a/index.html
+++ b/index.html
@@ -449,6 +449,22 @@
     </div>
     <!--End Pricing -->
 
+    <!--Start Subscribe-->
+    <div class="subscribe">
+      <div class="container">
+        <form action="">
+          <i class="far fa-envelope fa-lg"></i>
+          <input type="email" name="mail" placeholder="Your Email" />
+          <input type="submit" value="Subscribe" />
+        </form>
+        <p>
+          Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+          Mauris blan dit aliquet elit, eget tincidunt.
+        </p>
+      </div>
+    </div>
+    <!--End Subscribe-->
+
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
