--- a/index.html
+++ b/index.html
@@ -465,6 +465,67 @@
     </div>
     <!--End Subscribe-->
 
+    <!--Start Contact-us-->
+    <div class="contact-us">
+      <h1 class="title">Contact Us</h1>
+      <p>
+        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+        blandit aliquet elit, eget tincidunt.
+      </p>
+      <div class="container">
+        <form action="">
+          <input
+            class="main-input"
+            type="text"
+            name="name"
+            placeholder="Your Name"
+          />
+          <input
+            class="main-input"
+            type="email"
+            name="mail"
+            placeholder="Your Email"
+          />
+          <textarea
+            class="main-input"
+            name="message"
+            placeholder="Your Message"
+          ></textarea>
+          <input type="submit" value="Send Message" />
+        </form>
+        <div class="info">
+          <div class="data">
+            <h4>Get In Touch</h4>
+            <span class="phone">+00 123.456.789</span>
+            <span class="phone">+00 123.456.789</span>
+          </div>
+          <div class="data">
+            <h4>Where We Are</h4>
+            <address>
+              Awesome Address 17<br />New York, NYC<br />123-4567-890<br />USA
+            </address>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--End Contact-us-->
+
+    <div class="footer">
+      <div class="container">
+        <img src="img/logo.png" alt="logo" />
+        <p>We Are Social</p>
+        <div class="social-icons">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fas fa-home"></i>
+          <i class="fab fa-linkedin"></i>
+        </div>
+        <p class="copyright">
+          &copy; 2021 <span>Kasper</span> All Right Reserved
+        </p>
+      </div>
+    </div>
+
     <!--Main js-->
     <script src="js/main.js"></script>
   </body>
